# smart_gyroball

./: .gitignore  CMakeLists.txt  Makefile  README.md  last_measurement.json  requirements.txt  sdkconfig  sdkconfig.old  speed_statistics.json  test_advanced_calories.py  test_calories.py  user_settings.json  users.json
components/: CMakeLists.txt  lv_conf.h
components/components/esp_lcd_gc9a01/test_apps/: sdkconfig
components/components/esp_lvgl_port/src/lvgl8/: esp_lvgl_port_disp.c
components/components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
components/esp_lcd_gc9a01/test_apps/main/: test_esp_lcd_gc9a01.c
components/esp_lvgl_port/src/lvgl8/: esp_lvgl_port_disp.c
components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
components/fonts/: CMakeLists.txt  Sakana.c
components/img/: CMakeLists.txt  circle.c  clown.c  clown_rgb8.c  nature.c
gui/: speed_monitor.py  user_auth.py  weight_settings.py
main/: CMakeLists.txt  app_main.c  hardware_cfg.h  idf_component.yml  main.c
recv/: speed_subscriber.py
sender/: speed_publisher.py
server/: start_mqtt.sh
